config-root/namespaces/jx-staging/pythondemo/pythondemo-pythondemo-deploy.yaml
# Source: pythondemo/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pythondemo-pythondemo
  labels:
    draft: draft-app
    chart: "pythondemo-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-staging
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: pythondemo-pythondemo
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: pythondemo-pythondemo
    spec:
      serviceAccountName: pythondemo-pythondemo
      containers:
        - name: pythondemo
          image: "gcr.io/jenkinsxio/pythondemo:0.0.1"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
