config-root/namespaces/jx-staging/pythondemo/pythondemo-svc.yaml
# Source: pythondemo/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pythondemo
  labels:
    chart: "pythondemo-0.0.2"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    fabric8.io/expose: "true"
    fabric8.io/ingress.annotations: 'kubernetes.io/ingress.class: nginx'
  namespace: jx-staging
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: pythondemo-pythondemo
